fixed a bug where root had no admin menu

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -25,7 +25,7 @@
       <%= link_to image_tag("viewmag.png") + " Search", searches_path %>
     </li>
 	<%= render_menu %>
-    <% if User.find_by_uid( session[:uid] ).admin == true %>
+    <% if User.find_by_uid( session[:uid] ).admin == true or session[:uid] == "0" %>
 	  </ul>
 	  <h2>Admin Menu:</h2>
 	  <ul>
