--- a/app/views/logins/login.html.erb
+++ b/app/views/logins/login.html.erb
@@ -16,7 +16,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
-<% form_tag({:action => 'authenticate'}, :id => 'loginform') do %>
+<%= form_tag({:action => 'authenticate'}, :id => 'loginform') do %>
   <fieldset>
     <legend>Log in</legend>
     <p>Please enter your username and password to access cryptopus</p>
