update to new form_* calls

--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -18,7 +18,7 @@
 -%>
 
 <!--[form:account]-->
-<% form_for([@team, @group, @account]) do |f| %>
+<%= form_for([@team, @group, @account]) do |f| %>
   <%= f.error_messages %>
 
   <%= f.label :account %>
