--- a/app/views/recryptrequests/new.html.erb
+++ b/app/views/recryptrequests/new.html.erb
@@ -17,7 +17,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<% form_tag :action => 'create' do %>
+<%= form_tag :action => 'create' do %>
 
   <p>
     Your LDAP Password has changed until you last logged in.<br/>
