--- a/app/views/teammembers/_form.html.erb
+++ b/app/views/teammembers/_form.html.erb
@@ -18,7 +18,7 @@
 -%>
 
 <!--[form:username]-->
-<% form_tag :action => 'create' do %>
+<%= form_tag :action => 'create' do %>
   <%= error_messages_for 'teammembers' %>
 
   <%= label_tag :Username %>
