--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -19,7 +19,7 @@
 
 <!--[form:team]-->
 
-<% form_for( @team ) do |f| %>
+<%= form_for( @team ) do |f| %>
   <%= f.error_messages %>
 
   <%= f.label :name %>
