--- a/app/views/admin/ldapsettings/_form.html.erb
+++ b/app/views/admin/ldapsettings/_form.html.erb
@@ -18,7 +18,7 @@
 -%>
 
 <!--[form:ldapsetting]-->
-<% form_for( [:admin, @ldapsetting] ) do |f| %>
+<%= form_for( [:admin, @ldapsetting] ) do |f| %>
   <%= f.error_messages %>
 
   <%= f.label :basename %>
