--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,9 @@
 			</div>
 
       <div id="footer">
-			  <p>Cryptopus 2011</p>	
+        <p>
+          <%= link_to 'Cryptopus 2012', 'https://github.com/puzzle/cryptopus' %>
+        </p>
 			</div>
 
     </div>
