move key to initializes, update js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
   <%= stylesheet_link_tag 'cryptopus' %>
   <%= stylesheet_link_tag 'main_navigation' %>
   <% if session[:uid] %>
-    <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag :application %>
   <% end %>
 </head>
     
