--- a/app/assets/stylesheets/partials/_variable.scss
+++ b/app/assets/stylesheets/partials/_variable.scss
@@ -6,6 +6,7 @@
 // ------------------
 $base-font-size					: 16px;
 $base-line-height				: 24px;
+
 $grid-background-baseline-color	: rgba(black, .05);
 $grid-background-column-color	: rgba(red, .1);
 $grid-background-total-columns	: 24;
@@ -14,17 +15,30 @@ $grid-background-gutter-width	: 20px;
 
 // Global Palettes
 // ------------------
-$black				: #000 !default;
-$blackLight			: #222 !default;
-$blackLighter		: #555 !default;
-$grayDarker			: #999 !default;
-$grayDark			: #aaa !default;
-$gray				: #ccc !default;
-$grayLight			: #ddd !default;
-$grayLighter		: #eee !default;
-$white				: #fff !default;
-$whiteDark			: #f5f5f5 !default;
-$whiteDarker		: #f0f0f0 !default;
+
+$brown          : rgba(77, 63, 46, 1);
+
+$black				  : rgba(26, 21, 15, 1);
+$blackLight			: lighten($black, 0.2);
+$blackLighter		: lighten($black, 0.4);
+
+$grayDarker			: darken($brown, 0.2);
+$grayDark			  : $brown;
+
+$gray				    : rgba(165, 180, 170, 1) !default;
+$grayLight			: rgba(165, 180, 170, 1) !default;
+$grayLighter		: lighten($grayLight, 0.2);
+
+$white				  : #fff !default;
+$whiteDark			: rgba(254, 254, 246, 1) !default;
+$whiteDarker		: rgba(248, 247, 241, 1) !default;
+
+$blue       :   rgba(50, 165, 180, 1);
+$blueDark   :   rgba(36, 115, 125, 1);
+$yellow     :   rgba(255, 250, 180, 1);
+$green      :   rgba(155, 180, 50, 1);
+$red        :   rgba(170, 50, 30, 1);
+
 
 // Layout Palettes
 // -------------------------
@@ -35,9 +49,9 @@ $altColor			: $gray !default;
 
 // Link Palettes
 // -------------------------
-$linkColor			: #00baff !default;
-$linkHover			: darken($linkColor, 10%) !default;
-$linkVisited		: darken($linkHover, 5%) !default;
+$linkColor			: $blue !default;
+$linkHover			: $blueDark !default;
+$linkVisited		: lighten($linkHover, 5%) !default;
 $linkFocus			: $linkHover !default;
 $linkActive			: lighten(adjust-hue($linkColor, 75deg), 10%) !default;
 
@@ -50,46 +64,14 @@ $linkActive			: lighten(adjust-hue($linkColor, 75deg), 10%) !default;
  
 // Serif font-stacks
 // -------------------------
-
-$georgia			: Georgia, Palatino, "Palatino Linotype", Times, "Times New Roman", serif !default;
-$georgia-heading	: Georgia, Times, "Times New Roman", serif !default;
-$garamond			: Garamond, Baskerville, "Baskerville Old Face", "Hoefler Text", "Times New Roman", serif !default;
-$lucida-bright		: "Lucida Bright", Georgia, serif !default;
-$palatino			: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif !default;
-$big-caslon			: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif !default;
-$didot				: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif !default;
-$baskerville		: Baskerville, "Baskerville old face", "Hoefler Text", Garamond, "Times New Roman", serif !default;
-$hoefler-text		: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif !default;
-$bodoni-mt			: "Bodoni MT", Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", serif !default;
-$goudy-old-style	: "Goudy Old Style", Garamond, "Big Caslon", "Times New Roman", serif !default;
-$constantia			: Constantia, Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif !default;
-$cambria			: Cambria, Georgia, serif !default;
-$book-antiqua		: "Book Antiqua", Palatino, "Palatino Linotype", "Palatino LT STD", Georgia, serif !default;
-$times				: Times, "Times New Roman", Georgia, serif !default;
+$serif_family			: Georgia, Palatino, "Palatino Linotype", Times, "Times New Roman", serif !default;
 
 // Sans-Serif font-stacks
 // -------------------------
-
-$arial				: Arial, "Helvetica Neue", Helvetica, sans-serif !default;
-$optima				: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif !default;
-$futura				: Futura, "Trebuchet MS", Arial, sans-serif !default;
-$gill-sans			: "Gill Sans", "Gill Sans MT", Calibri, sans-serif !default;
-$trebuchet			: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif !default;
-$helvetica			: "Helvetica Neue", Arial, Helvetica, sans-serif !default;
-$verdana			: Verdana, Geneva, sans-serif !default;
-$lucida-grande		: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif !default;
-$geneva				: Geneva, Tahoma, Verdana, sans-serif !default;
-$segoe				: Segoe, "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
-$candara			: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif !default;
-$calibri			: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif !default;
-$franklin-gothic	: "Franklin Gothic Medium", Arial, sans-serif !default;
-$tahoma				: Tahoma, Geneva, Verdana, sans-serif !default;
+$sans_family				: Arial, "Helvetica Neue", Helvetica, sans-serif !default;
 
 // Monospace font-stacks
 // -------------------------
-
-$monospace			: "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace !default;
-$monospace-simple	: "andale mono", "lucida console", monospace !default;
 $consolas			: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace !default;
 
 // Cursive font-stacks
