--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -40,83 +40,83 @@ Author URI:		http://tokokoo.com
 */
 
 @import "compass";
-@import "partials/variable";
-@import "partials/mixins";
+// @import "partials/variable";
+// @import "partials/mixins";
 
-/* =============================================================================
-- Reset Stylesheet
-Simpler version of Normalize.css + Eric Meyer Reset
-============================================================================= */
-@import "partials/reset";
+// /* =============================================================================
+// - Reset Stylesheet
+// Simpler version of Normalize.css + Eric Meyer Reset
+// ============================================================================= */
+// @import "partials/reset";
 
-/* =============================================================================
-- Base
-Baseline, selection & links
-============================================================================= */
-@import "partials/base";
+// /* =============================================================================
+// - Base
+// Baseline, selection & links
+// ============================================================================= */
+// @import "partials/base";
 
-/* =============================================================================
-- Basic Responsive Grid
-Grid basic
-============================================================================= */
-@import "partials/grid";
+// /* =============================================================================
+// - Basic Responsive Grid
+// Grid basic
+// ============================================================================= */
+// @import "partials/grid";
 
-/* =============================================================================
-- Typography
-Headings, text element, lists, code, and more
-============================================================================= */
-@import "partials/typography";
+// /* =============================================================================
+// - Typography
+// Headings, text element, lists, code, and more
+// ============================================================================= */
+// @import "partials/typography";
 
-/* =============================================================================
-- Font Awesome
-Font icons - http://fortawesome.github.com/Font-Awesome
-============================================================================= */
-@import "partials/font-awesome";
+// /* =============================================================================
+// - Font Awesome
+// Font icons - http://fortawesome.github.com/Font-Awesome
+// ============================================================================= */
+// @import "partials/font-awesome";
 
-/* =============================================================================
-- Form
-Base styles for various input types and form layouts
-============================================================================= */
-@import "partials/forms";
+// /* =============================================================================
+// - Form
+// Base styles for various input types and form layouts
+// ============================================================================= */
+// @import "partials/forms";
 
-/* =============================================================================
-- Table
-Base styles for all tables
-============================================================================= */
-@import "partials/table";
+// /* =============================================================================
+// - Table
+// Base styles for all tables
+// ============================================================================= */
+// @import "partials/table";
 
-/* =============================================================================
-- Images
-Basic and global styles for images, caption, & gallery
-============================================================================= */
-@import "partials/images";
+// /* =============================================================================
+// - Images
+// Basic and global styles for images, caption, & gallery
+// ============================================================================= */
+// @import "partials/images";
 
-/* =============================================================================
-- Main
-Global and main styles
-============================================================================= */
-@import "partials/main";
+// /* =============================================================================
+// - Main
+// Global and main styles
+// ============================================================================= */
+// @import "partials/main";
 
-/* =============================================================================
-- Utilities
-List of helper classes (eg clearfix, alignment, etc)
-============================================================================= */
-@import "partials/utilities";
+// /* =============================================================================
+// - Utilities
+// List of helper classes (eg clearfix, alignment, etc)
+// ============================================================================= */
+// @import "partials/utilities";
 
-/* =============================================================================
-- Plugins
-Available plugins (eg slider, tooltip, lightbox)
-============================================================================= */
-@import "partials/plugins";
+// /* =============================================================================
+// - Plugins
+// Available plugins (eg slider, tooltip, lightbox)
+// ============================================================================= */
+// @import "partials/plugins";
 
-/* =============================================================================
-- Media Queries
-Styles for responsive layouts
-============================================================================= */
-@import "partials/media-queries";
+// /* =============================================================================
+// - Media Queries
+// Styles for responsive layouts
+// ============================================================================= */
+// @import "partials/media-queries";
 
-/* =============================================================================
-- Conditional IE class
-Style for IE only
-============================================================================= */
-@import "partials/ie";
+// /* =============================================================================
+// - Conditional IE class
+// Style for IE only
+// ============================================================================= */
+// @import "partials/ie";
