update stylesheet assets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 
   <% if session[:uid] %>
     <%= javascript_include_tag :application %>
+    <%= stylesheet_link_tag "application", :media => "all" %>
   <% end %>
 </head>
     
