--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -140,7 +140,7 @@ blockquote {
 	border-left: 3px solid $grayLighter;
 	color: $grayDark;
 	font-style: italic;
-	font-family: $georgia;
+	font-family: $serif_family;
 	margin: 1em 40px; 
 	padding-left: rhythm(.9);
 	
