--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -22,7 +22,7 @@
   <%= f.error_messages %>
 
   <%= f.label :account %>
-  <%= f.text_field :accountname %>
+  <%= f.text_field :accountname, :autofocus => true  %>
 
   <%= f.label :username %>
   <%= f.text_field :username %>
