--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -22,7 +22,7 @@
   <%= f.error_messages %>
 
   <%= f.label :name %>
-  <%= f.text_field :name %>
+  <%= f.text_field :name, :autofocus => true %>
 
   <%= f.label :description %>
   <%= f.text_area :description, options = {:cols => 35} %>
