return to teams list by clicking on the cryptopus banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
   <div id="page" class="hfeed container">
 
     <header id="masthead" class="site-header" role="banner">
-      <%= image_tag("cryptopus_top.png") %>
+      <%= link_to image_tag("cryptopus_top.png"), teams_path %>
     </header><!-- end #masthead .site-header -->
       
     <% if session[:uid] %>
