--- a/app/assets/stylesheets/partials/_variable.scss
+++ b/app/assets/stylesheets/partials/_variable.scss
@@ -13,6 +13,9 @@ $grid-background-total-columns	: 24;
 $grid-background-column-width	: 20px;
 $grid-background-gutter-width	: 20px; 
 
+$padding : $base-line-height;
+
+
 // Global Palettes
 // ------------------
 
