--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -7,12 +7,12 @@
 
 label {
 	font-weight: bold; 
-	font-size: 12px;
+	font-size: 1em;
 }
 
 fieldset {
 	border: 1px solid $grayLight;
-	font-size: 12px;
+	font-size: 1em;
 	line-height: 1.3em;
 	margin: 0 0 1.5em;
 	padding: 0 1.4em 1.4em 1.4em;
@@ -150,11 +150,11 @@ input[type="button"] {
 	color: #333333;
 	// Helvetica Neue present, because it works better
 	// for line-height on buttons than Arial, on OS X.
-	font: bold 12px / 1.3 "Helvetica Neue", Arial, "Liberation Sans", FreeSans, sans-serif;
+	font: bold 0.85em "Helvetica Neue", Arial, "Liberation Sans", FreeSans, sans-serif;
 	outline: 0;
 	overflow: visible;
 	margin: 0;
-	padding: 10px 20px;
+	padding: 6px 20px;
 	// IE7
 	*padding-top: 2px;
 	*padding-bottom: 0;
@@ -211,13 +211,12 @@ input[type="week"] {
 	color: $black;
 	outline: 0;
 	margin: 0;
-	padding: 3px 4px;
+	padding: 6px 4px;
 	text-align: left;
-	font-size: 13px;
+	font-size: 0.85em;
 	// Leaving out Helvetica Neue, to not throw off size="..."
 	// on inputs. Arial is more reliable, on Windows and OS X.
 	font-family: Arial, "Liberation Sans", FreeSans, sans-serif;
-	height: 2em;
 	vertical-align: top;
 	// IE7
 	*padding-top: 2px;
@@ -297,7 +296,7 @@ select[size="1"] {
 	select,
 	select[size="0"],
 	select[size="1"] {
-		background-image: image-url("select_arrow.gif");
+		background-image: image-url("/assets/select_arrow.gif");
 		background-repeat: no-repeat;
 		background-position: right center;
 		padding-right: 20px; 
