--- a/app/assets/stylesheets/partials/main/_menus.scss
+++ b/app/assets/stylesheets/partials/main/_menus.scss
@@ -6,7 +6,15 @@
  * Menu style
  */
 .main-navigation {
-	ul {
+	margin: $padding*0.5 0 0;
+  ul {
 		@include reset-list;
 	}
 }
+
+nav { 
+  @include border-radius(3px);
+  background: $gray; 
+  padding: $padding*0.25 $padding*0.25 0; 
+
+} 
