--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
 <% if session[:user_id] %>
 
 	<%= render_menu %>
-    <% if User.find_by_id( session[:user_id] ).admin == true or session[:user_id] == "0" %>
+    <% if User.find( session[:user_id] ).admin? or User.find( session[:user_id] ).root? %>
 	  </ul>
 	  <h2>Admin Menu:</h2>
 	  <ul>
@@ -35,7 +35,7 @@
       <li>
         <%= link_to image_tag("kontact_contacts.png") + " Users", admin_users_path %>
       </li>
-      <% if session[:user_id] == '0' %>
+      <% if User.find( session[:user_id] ).root? %>
         <li>
           <%= link_to image_tag("edit_user.png") + " Change password", pwdchange_login_path %>
         </li>
