--- a/app/views/admin/users/_index_menu.html.erb
+++ b/app/views/admin/users/_index_menu.html.erb
@@ -1,4 +1,4 @@
 </ul>
 <h2>Action</h2>
 <ul>
-<li><%= link_to image_tag( "add.png" ) + " Create new user", new_user_path %></li>
+<li><%= link_to image_tag( "add.png" ) + " Create new user", new_admin_user_path %></li>
