--- a/app/views/recryptrequests/new.html.erb
+++ b/app/views/recryptrequests/new.html.erb
@@ -20,7 +20,7 @@
 <%= form_tag :action => 'create' do %>
 
   <p>
-    Your LDAP Password has changed until you last logged in.<br/>
+    Your LDAP Password has changed since your last login.<br/>
     Please enter your old LDAP Passwort to decrypt your Private_key.
   </p><br/>
 
