added admin flag to user creation/edit form

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -26,6 +26,9 @@
 
   <%= f.label :password %>
   <%= f.password_field :password %>
+  
+  <%= f.label :admin %>
+  <%= f.check_box :admin %>
 
   <%= f.label :givenname %>
   <%= f.text_field :givenname %>
