removed test nav and using horizontal navs

--- a/app/views/accounts/_edit_menu.html.erb
+++ b/app/views/accounts/_edit_menu.html.erb
@@ -1,2 +1,4 @@
-<li><%= link_to image_tag( "viewmag.png" ) + " Show", :action => 'show', :id => @account %></li>
-<li><%= get_back_to_list_button %></li>
+<ul class="nav nav-pills">
+  <li><%= link_to image_tag( "viewmag.png" ) + " Show", :action => 'show', :id => @account %></li>
+  <li><%= get_back_to_list_button %></li>
+</ul>>
