--- a/app/views/admin/ldapsettings/_index_menu.html.erb
+++ b/app/views/admin/ldapsettings/_index_menu.html.erb
@@ -1,1 +1,3 @@
-<li><%= get_back_to_list_button("teams")%></li>
+<ul class="nav nav-pills">
+  <li><%= get_back_to_list_button("teams")%></li>
+</ul>
