--- a/app/views/groups/_show_menu.html.erb
+++ b/app/views/groups/_show_menu.html.erb
@@ -1,4 +1,3 @@
+<ul class="nav nav-pills">
+  <li><%= link_to 'Edit', [:edit, @team, @group]%></li>
 </ul>
-<h2>Action</h2>
-<ul>
-<li><%= link_to 'Edit', [:edit, @team, @group]%></li>
