--- a/app/views/groups/_index_menu.html.erb
+++ b/app/views/groups/_index_menu.html.erb
@@ -1,6 +1,3 @@
-<li><%= link_to image_tag( "kontact_contacts.png" ) + " Teams ", teams_path %></li>
-</ul>
-<h2>Action</h2>
-<ul>
-<li><%= link_to image_tag("add.png") + " Create group", new_team_group_url(@team) %></li>
+<ul class="nav nav-pills">
+  <li><%= link_to image_tag("add.png") + " Create group", new_team_group_url(@team) %></li>
 </ul>
