--- a/app/views/teams/_index_menu.html.erb
+++ b/app/views/teams/_index_menu.html.erb
@@ -1,4 +1,3 @@
+<ul class="nav nav-pills">
+  <li><%= link_to image_tag( "add.png" ) + " Create new team", new_team_path %></li>
 </ul>
-<h2>Action</h2>
-<ul>
-<li><%= link_to image_tag( "add.png" ) + " Create new team", new_team_path %></li>
