--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -21,6 +21,7 @@
 <table>
   <tr>
     <th>Username</th>
+    <th>Name</th>
     <th>Ldap UID</th>
     <th>Admin</th>
     <th>Action</th>
@@ -28,7 +29,8 @@
 
   <% for user in @users  %>
     <tr class="<%= cycle( 'odd', 'even' ) %>">
-      <td><%= link_to user.full_name, edit_admin_user_path(user) %></td>
+      <td><%= link_to user.username, edit_admin_user_path(user) %></td>
+      <td><%= user.full_name %></td>
       <td><%= user.uid.to_s %></td>
       <% if user.admin == true %>
         <td><%= image_tag("flag.png") %></td>
