--- a/app/views/layouts/_option.html.erb
+++ b/app/views/layouts/_option.html.erb
@@ -19,10 +19,10 @@
 <% if session[:user_id] %>
 <nav id="option">
 <ul>
-
-	<li>
+  <li>
     <%= link_to image_tag("exit.png") + " Logout", logout_login_path %>
   </li>
+  <div id="countdownWrapper">Autologoff: <span id='countdown' >000</span></div>
 </ul>
 </nav>
 <% end %>
