--- a/app/views/layouts/_option.html.erb
+++ b/app/views/layouts/_option.html.erb
@@ -22,7 +22,7 @@
   <li>
     <%= link_to image_tag("exit.png") + " Logout", logout_login_path %>
   </li>
-  <div id="countdownWrapper">Autologoff: <span id='countdown' >000</span></div>
+  <div id="countdownWrapper"><small>auto-logout in <span id='countdown'></small></span></div>
 </ul>
 </nav>
 <% end %>
