--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,17 +19,17 @@
 
 <div id="navcontainer">
 <% if session[:user_id] %>
-    <% if User.find( session[:user_id] ).admin? or User.find( session[:user_id] ).root? %>
 	  <ul class="nav nav-pills">
 	    <%= nav_link "folder_home.png", 'Teams', teams_path %>
-	    <%= nav_link "configure.png", 'LDAP settings', admin_ldapsettings_path %>
-	    <%= nav_link "flag.png", 'Recrypt requests', admin_recryptrequests_path %>
-	    <%= nav_link "kontact_contacts.png", 'Users', admin_users_path %>
-      <% if User.find( session[:user_id] ).root? %>
-	    <%= nav_link "edit_user.png", 'Change password', pwdchange_login_path %>
-      <% end %>
+        <% if User.find( session[:user_id] ).admin? or User.find( session[:user_id] ).root? %>
+	        <%= nav_link "configure.png", 'LDAP settings', admin_ldapsettings_path %>
+	        <%= nav_link "flag.png", 'Recrypt requests', admin_recryptrequests_path %>
+	        <%= nav_link "kontact_contacts.png", 'Users', admin_users_path %>
+        <% end %>
+        <% if User.find( session[:user_id] ).auth_db? %>
+	        <%= nav_link "edit_user.png", 'Change password', pwdchange_login_path %>
+        <% end %>
       </ul>
-    <% end %>
     <%= render_menu %>
 <% end %>
   </ul>
