--- a/app/assets/stylesheets/partials/main/_menus.scss
+++ b/app/assets/stylesheets/partials/main/_menus.scss
@@ -15,6 +15,6 @@
 nav { 
   @include border-radius(3px);
   background: $gray; 
-  padding: $padding*0.25 $padding*0.25 0; 
+  padding: $padding*0.25 $padding*0.25; 
 
 } 
